--- a/basics.html
+++ b/basics.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>me</title>
 </head>
 <body>
+    <!---->
 <!--this is a heading-->
 <h1>this is a heading 1</h1>
+<p style="color: brown;">
+    my name is Nancy
+
+</p>
 <p style ="color:red">this is a paragraph outside a div</p>
 <p style="background-color:grey">this is a paragraph with a background color</p>
 <div style="background-color:blue">
@@ -17,3 +22,8 @@
 <!--this is a comment-->
 </body>
 </html>
+<p style="background-color :red ">bingo was his name</p>
+<div>
+    <h2>HOBBIES</h2>
+    <p>swimming</p>
+</div>
